// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./PusElement.proto";


package pusGroundModel.protobuf;

message Pus011SubSchedule {
extensions 8 to 108;

  optional ccsds_mal.protobuf.UINTEGER ssId = 1;
  optional ccsds_mal.protobuf.UINTEGER status = 2;
  optional ccsds_mal.protobuf.ULONG executionTimeFirstTc = 3;
  optional ccsds_mal.protobuf.UINTEGER apid = 4;
  optional pusGroundModel.protobuf.PusElement pusElement = 5;
  optional ccsds_mal.protobuf.TIME groundDate = 6;
  optional ccsds_mal.protobuf.STRING ssIdLabel = 7;
}
